--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Cystic Fibrosis Map
+name: Process Diagram Models
 
 # Short bio or description (displayed in the header)
-description: Predictive disease model for personalised medicine
+description: Systems immunology for personalised medicine
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 <!--avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png-->
@@ -18,10 +18,10 @@ description: Predictive disease model for personalised medicine
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: cysticfibrosismap@googlegroups.com
+  email: pd-models@googlegroups.com
   facebook:
   flickr:
-  github: cysticfibrosismap
+  github: pd-models
   instagram:
   linkedin:
   pinterest:
