--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Process Diagram Models
+name: PD-MODELS
 
 # Short bio or description (displayed in the header)
-description: Systems immunology for personalised medicine
+description: Process Diagram Models
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 <!--avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png-->
